objects/ssot__ApplicationDecision__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Account</masterLabel>
            <refAttrDeveloperName>AccountId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ApplicantDecision__c</fullName>
        <label>Applicant Decision</label>
        <length>15</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Applicant Decision</masterLabel>
            <refAttrDeveloperName>ApplicantDecision</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ApplicationDecision__c</fullName>
        <label>Application Decision</label>
        <length>15</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Application Decision</masterLabel>
            <refAttrDeveloperName>ApplicationDecision</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ApplicationId__c</fullName>
        <label>Application</label>
        <length>15</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Application</masterLabel>
            <refAttrDeveloperName>ApplicationId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Comment__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Comment</masterLabel>
            <refAttrDeveloperName>Comment</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Data Source</masterLabel>
            <refAttrDeveloperName>DataSourceId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Data Source Object</masterLabel>
            <refAttrDeveloperName>DataSourceObjectId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DecisionAuthorityId__c</fullName>
        <label>Decision Authority</label>
        <length>15</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Decision Authority</masterLabel>
            <refAttrDeveloperName>DecisionAuthorityId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Application Decision Id</label>
        <length>15</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Application Decision Id</masterLabel>
            <primaryIndexOrder>1</primaryIndexOrder>
            <refAttrDeveloperName>Id</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Internal Organization</masterLabel>
            <refAttrDeveloperName>InternalOrganizationId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Name</masterLabel>
            <refAttrDeveloperName>Name</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PreliminaryApplicationRefId__c</fullName>
        <label>Preliminary Application Reference</label>
        <length>15</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Preliminary Application Reference</masterLabel>
            <refAttrDeveloperName>PreliminaryApplicationRefId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Score__c</fullName>
        <label>Score</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Score</masterLabel>
            <refAttrDeveloperName>Score</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719817704826_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ApplicationDecision_AccountId_map_Ac_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>ApplicationDecision_AccountId_map_Ac_rel</relationshipLabel>
        <relationshipName>rel_1719817704826_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719818359660_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ApplicationDecision_DecisionAuthorit_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>ApplicationDecision_DecisionAuthorit_rel</relationshipLabel>
        <relationshipName>rel_1719818359660_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719819536377_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ApplicationDecision_PreliminaryAppli_rel</label>
        <referenceTo>ssot__SavedApplicationReference__dlm</referenceTo>
        <relationshipLabel>ApplicationDecision_PreliminaryAppli_rel</relationshipLabel>
        <relationshipName>rel_1719819536377_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <mktDataModelAttributes>
        <creationType>Standard</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>false</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <masterLabel>Application Decision</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Unassigned</objectCategory>
        <referenceEntityGroup>Application Form</referenceEntityGroup>
        <referenceEntityName>ApplicationDecision</referenceEntityName>
        <referenceEntitySubjectArea>Application Form</referenceEntitySubjectArea>
    </mktDataModelAttributes>
</CustomObject>